--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-express-sequelize-mysql",
   "version": "1.0.0",
-  "description": "Rest Apis with Node.js, Express, Sequelize & MySQL",
+  "description": "Rest Apis with Node.js, Express, Sequelize, JsonWebTokens & MySQL",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -19,13 +19,15 @@
   "author": "dani54196",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.8"
+    "sequelize": "^6.25.8",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
